--- a/public/partials/login.html
+++ b/public/partials/login.html
@@ -1,7 +1,7 @@
-<!-- <div id="loginModalOverlay">
-	<div class="modal">
-		<button class="google-button" ng-click="onGoogleClick()"></button>
+<div id="loginBoxWrapper">
+	<div class="login-box">
+		<h1>Please choose a username</h1>
+		<input type="text" ng-model="username" ng-enter="login()" />
+		<button ng-click="login()">Login</button>
 	</div>
-</div> -->
-
-<button class="google-button" ng-click="onGoogleClick()"></button>
+</div>
