--- a/scss/_frame.scss
+++ b/scss/_frame.scss
@@ -1,25 +1,19 @@
-#header {
-	width: 100%;
-	height: $header-height;
-
-	position: absolute;
-	top: 0;
-	left: 0;
-	right: 0;
-
-	background-color: $peter-river;
-}
-
 #mainViewWrapper {
 	width: 100%;
 	height: 100%;
 
 	padding-top: $header-height;
+
+	overflow: hidden;
 }
 
 #mainView {
 	width: 100%;
 	height: 100%;
+	// overflow: auto;
+	overflow: hidden;
+
+	position: relative;
 }
 
 #topFrameWrapper {
