--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,11 +1,13 @@
 @import 'vars';
 
-@import 'reset'; 
+// @import 'reset'; 
 @import 'fonts';
 @import 'globals';
+@import 'directives';
 @import 'frame'; 
-@import 'login';
+@import 'header';
 
+@import 'login';
 @import 'project_selection';
 @import 'project_timeline';
 @import 'milestone';
