--- a/public/partials/milestone.html
+++ b/public/partials/milestone.html
@@ -1,50 +1,50 @@
 <div id="milestone">
-    <div class="details-frame">
-        <div class="details-content fill-space dz-table">
-            <div class="table-row-0">
-                <h1 class="milestone-title">{{ milestone.title }}</h1>
-            </div>
-            <div class="table-row">
-                <dz-tabs>
-                    <dz-tab-pane title="Summary">
-                        <p>{{ milestone.description }}</p>
-                    </dz-tab-pane>
-                    <dz-tab-pane title="User Progress">
-                        <div ng-show="authData.loggedIn">
-                        <p>I'm ... </p>
-                            <select ng-model="userStatusObj.userStatus" ng-options="value for value in statusNames" ng-change="updateStatus()">
-                                <option value="">&gt;-- choose status --&lt;</option>
-                            </select>
+
+    <div class="milestone-title">
+        <h1 class="hidden-xs hidden-sm">{{ milestone.title }}</h1>
+        <h4 class="hidden-md hidden-lg">{{ milestone.title }}</h4>
+    </div>
+
+    <div class="milestone-content">
+        <dz-tabs>
+            <dz-tab-pane title="Chat" pane-class="chat-pane">
+
+                <div class="chat-box">
+                    <div class="chat-stream">
+                        <div class="chat" ng-repeat="(id, chat) in milestone.chat_stream">
+                            <h1><em>{{ chat.user }}</em></h1>
+                            <p ng-bind-html="chat.msg | addAnchors"></p>
                         </div>
-                        <ul>
-                            <li ng-repeat="(name, user) in milestone.users">
-                            {{name}} <i class="ra-icon-user2" ng-style="{'color': getStatusColor(user.status)}" title="{{ user.status }}"></i>
+                    </div>
+                </div>
 
-                            <span ng-style="{'color': getStatusColor(user.status)}">{{ user.status }}</span> 
-                            </li>
-                        </ul>
-                    </dz-tab-pane>
-                </dz-tabs>
-            </div>
-        </div>
+                <div class="chat-input">
+                    <div class="input-wrapper">
+                        <input type="text" ng-model="chatData.message" ng-enter="sendChat()" />
+                    </div>
+                    <button ng-click="sendChat()">Send</button>
+                </div>
+            </dz-tab-pane>
+            <dz-tab-pane title="{{ num_active_users }} Active Users" pane-class="users-pane">
+                <ul>
+                    <li ng-repeat="(name, user) in milestone.active_users">
+                    <i class="icon-user"></i> {{name}} 
+                    </li>
+                </ul>
+            </dz-tab-pane>
+            <dz-tab-pane title="User Progress" pane-class="progress-pane">
+                <div class="status-chooser">
+                    <ul>
+                        <li ng-repeat="status in statusNames"><button ng-click="updateStatus($index)" ng-style="{'background-color': statusColors[$index]}">{{ status }}</button></li>
+                    </ul>
+                </div>
+                <ul class="user-list">
+                    <li ng-repeat="(name, user) in milestone.users">
+                        <i class="icon-user" ng-style="{'color': statusColors[user.status]}" title="{{ statusNames[user.status] }}"></i>
+                    </li>
+                </ul>
+            </dz-tab-pane>
+        </dz-tabs>
     </div>
 
-    <div class="chat-frame">
-        <div class="chat-box">
-            <div class="chat-stream">
-                <div class="chat" ng-repeat="(id, chat) in milestone.chat_stream">
-                    <h1><em>{{ chat.user }}</em></h1>
-                    <p ng-bind-html="chat.msg | addAnchors"></p>
-                </div>
-            </div>
-
-            <div class="chat-input">
-                <div class="input-wrapper">
-                    <input type="text" ng-model="message" ng-enter="sendChat()" />
-                </div>
-                <button ng-click="sendChat()">Send</button>
-            </div>
-        </div>
-    </div>
 </div>
-
