--- a/scss/_login.scss
+++ b/scss/_login.scss
@@ -1,89 +1,88 @@
-#loginModalOverlay {
-	width: 100%;
-	height: 100%;
+#loginBoxWrapper {
+	// width: 400px;
+	// height: 260px;
 
 	position: absolute;
-	top: 0;
-	bottom: 0;
-	left: 0;
-	right: 0;
+	top: 50%;
+	left: 50%;
 
-	background-color: transparentize($black, 0.3);
-
-	.modal {
-		position: absolute;
-		top: 50%;
-		left: 50%;
-		transform: translate(-50%, -50%);
-
-		// width: 50%;
-		// width: 300px;
-		// height: 50%;
-		// height: 250px;
+	.login-box {
+		width: 100%;
+		height: 100%;
 
 		padding: 15px;
-		background-color: $white;
+
+		transform: translate(-50%, -60%);
+
+		background-color: $belize-hole;
+
+		h1 {
+			color: $white;
+		}
+
+		input {
+			margin-bottom: 10px;
+		}
+
+		button {
+			width: 100%;
+
+			color: $white;
+			background-color: $emerald;
+		}
+	}
+}
+
+
+
+// #loginModalOverlay {
+// 	width: 100%;
+// 	height: 100%;
+
+// 	position: absolute;
+// 	top: 0;
+// 	bottom: 0;
+// 	left: 0;
+// 	right: 0;
+
+// 	background-color: transparentize($black, 0.3);
+
+// 	.modal {
+// 		position: absolute;
+// 		top: 50%;
+// 		left: 50%;
+// 		transform: translate(-50%, -50%);
+
+// 		// width: 50%;
+// 		// width: 300px;
+// 		// height: 50%;
+// 		// height: 250px;
+
+// 		padding: 15px;
+// 		background-color: $white;
 
 		
-	}
-}
+// 	}
+// }
 
-.google-button {
-	width: 197px;
-	height: 42px;
-	padding: 0;
+// .google-button {
+// 	width: 197px;
+// 	height: 42px;
+// 	padding: 0;
 
-	background-color: transparent;
-	background-image: url("/img/Red-signin_Long_base_32dp.png");
+// 	background-color: transparent;
+// 	background-image: url("/img/Red-signin_Long_base_32dp.png");
 
-	&:hover {
-		background-color: transparent;
-		background-image: url("/img/Red-signin_Long_hover_32dp.png");
-	}
+// 	&:hover {
+// 		background-color: transparent;
+// 		background-image: url("/img/Red-signin_Long_hover_32dp.png");
+// 	}
 
-	&:active {
-		background-color: transparent;
-		background-image: url("/img/Red-signin_Long_press_32dp.png");
-	}
-}
+// 	&:active {
+// 		background-color: transparent;
+// 		background-image: url("/img/Red-signin_Long_press_32dp.png");
+// 	}
+// }
 
-.login-box {
-	width: 450px;
-	height: 100%;
 
-	float: right;
 
-	.input-wrapper {
-        width: 100%;
-        padding-right: 100px;
-
-        input {
-        	height: 100%;
-            border-radius: 0;
-        }
-    }
-
-    button {
-        width: 100px;
-        height: 100%;
-
-        position: absolute;
-        top: 0;
-        right: 0;
-
-        border-radius: 0;
-
-        color: $white;
-        background-color: $emerald;
-    }
-}
-
-.account-box {
-	width: 100%;
-	height: 100%;
-
-	color: $white;
-	padding: 8px;
-
-	text-align: right;
-}
