--- a/scss/_project_selection.scss
+++ b/scss/_project_selection.scss
@@ -1,40 +1,42 @@
 #projectSelectionFrame {
 
-	text-align: center;
+	.project {
+		display: block;
+		width: 100%;
+		height: 100%;
 
-	ul {
-		li {
+		margin: 10px 0;
+		padding: 20px;
 
-			a {
-				display: block;
-				margin: 20px;
-				padding: 15px;
-				color: $white;
+		color: $black;
+		// font-weight: bold;
+		font-size: 24px;
 
-				background-color: $silver;
+		background-color: $white;
+
+		transition: all 0.25s;
+
+		span {
+			float: right;
+
+			transition: all 0.25s;
+		}
+
+		&:hover {
+			background-color: darken($white, 2%);
+
+			text-decoration: none;
+
+			span {
+				transform: translateX(-6px);
 			}
+		}
 
-			.new-project-box {
-				width: 100%;
-				margin: 20px;
-				padding: 15px;
+		&:active {
+			background-color: darken($white, 10%);
 
-				.input-wrapper {
-					padding-right: 80px;
-
-					input {
-						border: 1px solid $silver;
-					}
-				}
-
-				button {
-					min-width: 0;
-					width: 80px;
-					float: right;
-
-					color: $white;
-					background-color: $emerald;
-				}
+			span {
+				transform: translateX(3px);
 			}
 		}
 	}
