--- a/scss/_project_timeline.scss
+++ b/scss/_project_timeline.scss
@@ -1,120 +1,185 @@
-#projectTimeline {
-    width: 100%;
-    height: 100%;
+#milestonesFrame {
 
-    .project-title {
-        height: 40px;
+    .milestone-wrapper {
 
-        position: absolute;
-        top: 15%;
-        left: 0;
-        right: 0;
+        a.milestone {
+            display: block;
+            width: 100%;
+            height: 100%;
 
-        text-align: center;
+            margin: 10px 0 0 0;
+            padding: 20px;
 
-        h1 {
-            color: $midnight-blue;
-            font-size: $font-size-base * 2.5;
-            font-weight: bold;
-        }
-    }
+            color: $black;
+            // font-weight: bold;
+            font-size: 20px;
 
-    .project-toolbar {
-        position: absolute;
-        top: 5px;
-        right: 5px;
-
-        ul {
-
-
-            li {
-                display: inline-block;
-            }
-        }
-
-        button {
-            min-width: 0;
-            background-color: $clouds;
-
-            opacity: 0.6;
+            background-color: $white;
 
             transition: all 0.25s;
 
             span {
-                display: none;
+                float: right;
+
+                transition: all 0.25s;
             }
 
             &:hover {
-                opacity: 1.0;
+                background-color: darken($white, 2%);
+
+                text-decoration: none;
 
                 span {
-                    display: inline;
+                    transform: translateX(-6px);
+                }
+            }
+
+            &:active {
+                background-color: darken($white, 10%);
+
+                span {
+                    transform: translateX(3px);
                 }
             }
         }
-    }
 
-    .project-timeline {
-        width: 100%;
-        // height: 100%;
+        .milestone-info {
+            margin-left: 45px;
+            padding: 6px;
+            background-color: darken($white, 2%);
 
-        position: absolute;
-        top: 50%;
-        left: 0;
-        right: 0;
+            ul {
+                margin: 0;
+                padding: 0;
+                list-style: none;
 
-        transform: translate(0, -50%);
 
-        padding: 20px 30px;
-        padding-top: 40px;
-        white-space: nowrap;
-        overflow-x: auto;
-        overflow-y: hidden;
-
-        .milestone {
-            display: inline-block;
-
-            position: relative;
-
-            // width: 250px;
-            // height: 80px;
-
-            margin-right: 120px;
-            padding: 25px;
-            border-radius: 8px;
-
-            background-color: $peter-river;
-
-            cursor: pointer;
-
-            .milestone-title {
-                // position: absolute;
-                // top: 50%;
-                // left: 50%;
-
-                // transform: translate(-50%, -50%);
-
-                font-size: $font-size-base * 1.2;
-            }
-
-            .dots {
-                position: absolute;
-                top: 50%;
-                right: -111px;
-
-                transform: translate(0, -50%);
-
-                .dot {
+                li {
                     display: inline-block;
-
-                    width: 30px;
-                    height: 30px;
-
-                    border-radius: 50%;
-
-                    background-color: $peter-river;
                 }
             }
         }
     }
 }
+
+
+// #projectTimeline {
+//     width: 100%;
+//     height: 100%;
+
+//     .project-title {
+//         height: 40px;
+
+//         position: absolute;
+//         top: 15%;
+//         left: 0;
+//         right: 0;
+
+//         text-align: center;
+
+//         h1 {
+//             color: $midnight-blue;
+//             font-size: $font-size-base * 2.5;
+//             font-weight: bold;
+//         }
+//     }
+
+//     .project-toolbar {
+//         position: absolute;
+//         top: 5px;
+//         right: 5px;
+
+//         ul {
+
+
+//             li {
+//                 display: inline-block;
+//             }
+//         }
+
+//         button {
+//             min-width: 0;
+//             background-color: $clouds;
+
+//             opacity: 0.6;
+
+//             transition: all 0.25s;
+
+//             span {
+//                 display: none;
+//             }
+
+//             &:hover {
+//                 opacity: 1.0;
+
+//                 span {
+//                     display: inline;
+//                 }
+//             }
+//         }
+//     }
+
+//     .project-timeline {
+//         width: 100%;
+//         // height: 100%;
+
+//         position: absolute;
+//         top: 50%;
+//         left: 0;
+//         right: 0;
+
+//         transform: translate(0, -50%);
+
+//         padding: 20px 30px;
+//         padding-top: 40px;
+//         white-space: nowrap;
+//         overflow-x: auto;
+//         overflow-y: hidden;
+
+//         .milestone {
+//             display: inline-block;
+
+//             position: relative;
+
+//             // width: 250px;
+//             // height: 80px;
+
+//             margin-right: 120px;
+//             padding: 25px;
+//             border-radius: 8px;
+
+//             background-color: $peter-river;
+
+//             cursor: pointer;
+
+//             .milestone-title {
+//                 // position: absolute;
+//                 // top: 50%;
+//                 // left: 50%;
+
+//                 // transform: translate(-50%, -50%);
+
+//                 font-size: $font-size-base * 1.2;
+//             }
+
+//             .dots {
+//                 position: absolute;
+//                 top: 50%;
+//                 right: -111px;
+
+//                 transform: translate(0, -50%);
+
+//                 .dot {
+//                     display: inline-block;
+
+//                     width: 30px;
+//                     height: 30px;
+
+//                     border-radius: 50%;
+
+//                     background-color: $peter-river;
+//                 }
+//             }
+//         }
+//     }
+// }
