--- a/public/partials/milestone.html
+++ b/public/partials/milestone.html
@@ -18,6 +18,14 @@
                     </div>
                 </div>
 
+                <div class="chat-users">
+                    <ul>
+                        <li ng-repeat="(name, user) in milestone.active_users">
+                        <i class="icon-user"></i> {{name}} 
+                        </li>
+                    </ul>
+                </div>
+
                 <div class="chat-input">
                     <div class="input-wrapper">
                         <input type="text" ng-model="chatData.message" ng-enter="sendChat()" />
