--- a/scss/_milestone.scss
+++ b/scss/_milestone.scss
@@ -125,12 +125,33 @@
                 }
             }
 
+            .chat-users {
+                height: 26px;
+
+                position: absolute;
+                bottom: 46px;
+                left: 0;
+                right: 0;
+
+                ul {
+
+                    list-style: none;
+                    margin: 0;
+                    padding: 0;
+
+                    li {
+                        display: inline-block;
+                        margin-right: 4px;
+                    }
+                }
+            }
+
             .chat-box {
                 width: 100%;
                 height: 100%;
 
                 padding: 8px;
-                padding-bottom: 54px;
+                padding-bottom: 80px;
 
                 overflow: hidden;
 
