--- a/public/partials/project-timeline.html
+++ b/public/partials/project-timeline.html
@@ -1,11 +1,11 @@
 <div class="container">
 	<div id="milestonesFrame">
 		
-		<div class="row">
+		<!-- <div class="row">
 			<div class="col-md-12 text-center">
 				<h1>{{ project.title }}</h1>
 			</div>
-		</div>
+		</div> -->
 
 		<div ng-repeat="(id, milestone) in project.milestones" class="row">
 			<div class="col-xs-12 col-sm-8 col-sm-offset-2 col-md-6 col-md-offset-3 col-lg-6 col-lg-offset-3 milestone-wrapper">
