--- a/public/partials/project-selection.html
+++ b/public/partials/project-selection.html
@@ -1,12 +1,12 @@
 <div class="container">
 	<div id="projectSelectionFrame">
 
-		<div class="row">
+		<!-- <div class="row">
 			<div class="col-md-12 text-center">
 				<h1>Projects</h1>
 				<h3>Choose a project.</h3>
 			</div>
-		</div>
+		</div> -->
 
 		<div ng-repeat="(id, project) in projects" class="row">
 			<div class="col-xs-12 col-sm-8 col-sm-offset-2 col-md-6 col-md-offset-3 col-lg-6 col-lg-offset-3">
