--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -2,12 +2,54 @@
     width: 100%;
     height: $header-height;
 
+    color: $white;
+    text-align: center;
+
     position: absolute;
     top: 0;
     left: 0;
     right: 0;
 
     background-color: $belize-hole;
+
+    .back-link {
+    	width: 65px;
+    	height: 100%;
+    	float: left;
+
+    	button {
+    		width: 100%;
+    		height: 100%;
+
+    		border-radius: 0;
+    		text-align: center;
+    		padding: 10px;
+
+    		background-color: transparent;
+
+    		&:hover {
+    			background-color: $peter-river;
+    		}
+    	}
+    }
+
+    .title {
+    	max-width: 320px;
+    	margin: auto;
+
+
+
+    	h1 {
+    		margin: 0;
+    		padding: 10px;
+
+    		font-size: 24px;
+
+    		white-space: nowrap;
+    		overflow: hidden;
+  			text-overflow: ellipsis;
+    	}
+    }
 }
 
 
