--- a/scss/_milestone.scss
+++ b/scss/_milestone.scss
@@ -6,6 +6,237 @@
 
     overflow: hidden;
 
+    .chat-pane {
+        width:  100%;
+        height: 100%;
+
+        position: relative;
+
+        .chat-input {
+            height: 46px;
+
+            position: absolute;
+            bottom: 0;
+            left: 0;
+            right: 0;
+
+            .status-wrapper {
+                width: 47px;
+                position: absolute;
+                top: 0;
+                bottom: 0;
+                left: 0;
+
+                transition: all 0.25s;
+
+                &.status-open {
+                    width: 100%;
+                    right: 0;
+                }
+
+                .cur-status {
+                    width: 47px;
+                    height: 47px;
+
+                    padding: 1px 5px;
+
+                    // color: $emerald;
+                    font-size: 36px;
+                }
+
+                .status-choices {
+                    position: absolute;
+                    top:0;
+                    bottom:0;
+                    left: 47px;
+                    right:0;
+
+                    background-color: red;
+
+                    button {
+                        display: inline;
+                        width: 25%;
+                        height: 100%;
+                        float: left;
+
+                        margin: 0;
+                        padding: 0;
+                        border-radius: 0;
+
+                        color: $white;
+
+                        &.started {
+                            background-color: $peter-river;
+
+                            &:hover {
+                                background-color: lighten($peter-river, 4%);
+                            }
+                        }
+
+                        &.working {
+                            background-color: $sun-flower;
+
+                            &:hover {
+                                background-color: lighten($sun-flower, 4%);
+                            }
+                        }
+
+                        &.stuck {
+                            background-color: $alizarin;
+
+                            &:hover {
+                                background-color: lighten($alizarin, 4%);
+                            }
+                        }
+
+                        &.done {
+                            background-color: $emerald;
+
+                            &:hover {
+                                background-color: lighten($emerald, 4%);
+                            }
+                        }
+                    }
+                }
+            }
+
+            .send-wrapper {
+
+                position: absolute;
+                top: 0;
+                bottom: 0;
+                right: 0;
+                left: 47px;
+
+                transition: all 0.25s;
+
+                &.status-open {
+                    left: 100%;
+                    right: -100%;
+                }
+
+                .input-wrapper {
+                    width: 100%;
+                    padding-right: 100px;
+
+                    input {
+                        border-radius: 0;
+                    }
+                }
+
+                button {
+                    width: 100px;
+                    height: 46px;
+
+                    position: absolute;
+                    top: 0;
+                    right: 0;
+
+                    border-radius: 0;
+
+                    color: $white;
+                    background-color: $emerald;
+                }
+            }
+        }
+
+        .chat-users {
+            height: 26px;
+
+            position: absolute;
+            bottom: 46px;
+            left: 0;
+            right: 0;
+
+            ul {
+
+                list-style: none;
+                margin: 0;
+                padding: 0;
+
+                li {
+                    display: inline-block;
+                    margin-right: 4px;
+                }
+            }
+        }
+
+        .chat-box {
+            width: 100%;
+            height: 100%;
+
+            padding: 8px;
+            padding-bottom: 80px;
+
+            overflow: hidden;
+
+            .chat-stream {
+                width: 100%;
+                max-width: 500px;
+                height: 100%;
+
+                margin: auto;
+
+                padding: 0 5px;
+
+                overflow-y: auto;
+                overflow-x: hidden;
+
+                .chat {
+                    // width: 100%;
+                    padding: 10px;
+                    margin-bottom: 8px;
+                    position: relative;
+
+                    background-color: $white;
+
+                    h1 {
+                        color: $concrete;
+                        font-size: $font-size-base * 0.6;
+                        margin: 0;
+                        margin-bottom: 6px;
+                    }
+
+                    p {
+                        margin: 0;
+
+                        a {
+                            color: $peter-river;
+                        }
+                    }
+
+                    button {
+                        min-width: 0px;
+                        width: 32px;
+                        height: 100%;
+
+                        padding: 0px;
+                        border-radius: 0px;
+
+                        position: absolute;
+                        top: 0;
+                        right: 0;
+                        bottom: 0;
+
+                        &:hover {
+                            background-color: $clouds;
+                        }
+
+                        &[disabled] {
+                            color: $silver;
+                            background-color: $asbestos;
+
+                            &:hover {
+                                background-color: $asbestos;
+                            }
+                        }
+                    }
+                }
+            }
+        }
+
+    }
+
     .milestone-title {
 
         height: 70px;
